--- a/app/index.html
+++ b/app/index.html
@@ -27,15 +27,15 @@
     <div class="main-content">
       <div class="main-content__wrapper">
         <header class="header">
-          <div class="wrapp"><a href="" class="logo"><img src="img/logo.png" alt="logo" class="logo__img"></a>
+          <div class="wrapp"><a href="javascript:void(0)" class="logo"><img src="img/logo.png" alt="logo" class="logo__img"></a>
             <address class="contacts"><a href="tel:+74957990371" class="contacts__phone">+7 495 799 0371</a>
               <div class="contacts__addr">109387, г. Москва, ул. Тихая, д. 33, стр. 1</div>
             </address>
             <ul class="menu">
-              <li class="menu__item"><a href="" class="menu__link">О компании</a></li>
-              <li class="menu__item"><a href="" class="menu__link">Технология</a></li>
-              <li class="menu__item"><a href="" class="menu__link">Услуги</a></li>
-              <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+              <li class="menu__item"><a href="about.html" class="menu__link">О компании</a></li>
+              <li class="menu__item"><a href="technology.html" class="menu__link">Технология</a></li>
+              <li class="menu__item"><a href="servises.html" class="menu__link">Услуги</a></li>
+              <li class="menu__item"><a href="contacts.html" class="menu__link">Контакты</a></li>
             </ul>
           </div>
         </header>
@@ -68,7 +68,8 @@
                 <p class="text-info__text">Производство и&nbsp;поставка материалов в&nbsp;любой регион&nbsp;РФ</p>
                 <p class="text-info__text">Обучение дилеров и&nbsp;партнеров</p>
               </div>
-            </div><img src="img/bg1.png" alt="example" class="content__img">
+            </div>
+            <div class="content__img"><img src="img/bg1.png" alt="example" class="content__img_block"></div>
           </div>
         </div>
       </div>
@@ -81,16 +82,14 @@
     <!-- build:js js/vendor.min.js-->
     <!-- bower:js-->
     <script src="/bower/jquery/jquery.js"></script>
-    <script src="/bower/jquery-mousewheel/jquery.mousewheel.js"></script>
     <script src="/bower/fancybox/source/jquery.fancybox.js"></script>
+    <script src="/bower/jquery-mousewheel/jquery.mousewheel.js"></script>
+    <script src="/bower/respond/dest/respond.src.js"></script>
     <!-- endbower-->
     <!-- endbuild-->
     <!-- build:js js/main.min.js-->
     <script src="js/modules.js"></script>
     <script src="js/main.js"></script>
-    <!-- endbuild-->
-    <!-- build:js js/iePlaceholder.min.js--><!--[if lte IE 9]>
-    <script src="js/iePlaceholder.js"></script><![endif]-->
     <!-- endbuild-->
   </body>
 </html>
